Signed-off-by: virnos <47358251@qq.com>

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,18 @@
 appname = PID
 httpport = 80
 runmode = dev
+
+
+sessionon = true
+
+
+############################DB######################
+db_host = localhost
+db_path = data/
+db_port = 3306
+db_user = root
+db_pass = root
+db_name = PID
+db_type = sqlite3
+
+####################################################
